[package]
name = "perry-ext-uuid"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for the npm `uuid` package — uses only `perry-ffi`. Third port under #466 Phase 5 (after dotenv + nanoid)."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
uuid = { version = "1.23", features = ["v1", "v4", "v7"] }

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
