[package]
name = "perry-ext-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `ws` — WebSocket client + server via tokio-tungstenite. Uses only `perry-ffi`. Per-client + per-server task via spawn_blocking; per-module pending queue + GC root scanner for listener closures."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
lazy_static = "1.5"
