[package]
name = "perry-ext-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `ws` — WebSocket client + server via tokio-tungstenite. Uses only `perry-ffi`. Per-client + per-server task via spawn_blocking; per-module pending queue + GC root scanner for listener closures."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
tokio = { workspace = true }
# Use the workspace pin so perry-ext-http-server (issue #577) and
# perry-ext-ws agree on the WebSocketStream<S> type for the upgrade
# handoff; mismatched versions split type identity and the
# `register_external_ws_stream` re-export silently fails to compile.
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
lazy_static = "1.5"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
perry-runtime.workspace = true
