[package]
name = "perry-ext-zlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for Node's `zlib` module — uses only `perry-ffi`. First binary-bytes wrapper port (Phase 5 step 11)."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
flate2 = "1"
# Brotli stream + one-shot support (#1843). Matches the version the
# `compression` feature pulls into perry-stdlib.
brotli = "8.0.2"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
