[package]
name = "perry-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable FFI surface for native bindings packages that wrap Rust crates for Perry. Wrapper authors depend on this; perry-runtime internals stay free to evolve."
repository.workspace = true

[dependencies]
# perry-ffi is a thin re-export layer over perry-runtime — same process,
# same arena, same GC. The `perry-ffi` semver moves independently from
# `perry-runtime`; this dep is `path =` for in-tree use, but external
# wrappers will pull `perry-ffi = "0.5"` from crates.io and link
# against whichever runtime ships with the perry binary they're loaded
# into. ABI compatibility is asserted via `perry.nativeLibrary.abiVersion`
# in package.json (#466 Phase 2).
perry-runtime.workspace = true
