[package]
name = "perry-jsruntime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "V8 JavaScript runtime for npm module support in Perry"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
perry-runtime = { path = "../perry-runtime", features = ["stdlib"] }
perry-stdlib = { path = "../perry-stdlib" }
perry-types.workspace = true

# V8 runtime via deno_core
deno_core = "0.400"
deno_error = "0.7"

# Async runtime for V8
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Lazy initialization
once_cell = "1.19"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
log.workspace = true

# Serialization for module metadata
serde.workspace = true
serde_json.workspace = true

# Regex for CommonJS parsing
regex = "1"

# HTTP client for fetch() polyfill (blocking, no Tokio dependency)
ureq = "2"

# HTTP server stack for `http.createServer` shim used by the V8 fallback
# path (express/fastify smoke tests). Same crate versions as perry-ext-http-server
# so we don't duplicate the dep graph.
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
bytes = "1.5"

# HMAC + SHA2 for `node:crypto.createHmac` in the V8 fallback path so
# packages like `jose` can compute real HS256/HS384/HS512 signatures
# without falling through to a no-op digest. Same crate versions as
# `perry-stdlib`'s `crypto` feature so we don't duplicate the dep graph.
hmac = "0.12"
sha2 = "0.10"

[features]
default = []
