[package]
name = "perry-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime library: GC, JSValue, builtins"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
# `default` keeps the shipped prebuilt libperry_runtime.a and plain
# `cargo build`/test full-featured. The auto-optimize path builds with
# `--no-default-features` and re-adds only the features a given program
# actually needs (see optimized_libs.rs), so the heavy subsystems below
# (regex engine, Temporal, URL/IDNA, normalize, segmenter) are *opt-in per
# app* and absent from binaries that never use them.
default = ["full", "regex-engine", "temporal", "url-engine", "string-normalize", "intl-segmenter", "intl-locale", "diagnostics", "mod-dgram"]
# Per-module Node-API gate (binary-size): compiles `node:dgram`'s UDP-socket
# implementation (`crate::dgram` + `crate::dgram_reactor`, ~2.2k LOC, incl. the
# `js_dgram_*` externs codegen emits direct calls to) + its dispatch arm only
# when the program imports `dgram`. The compiler enables it on `module: "dgram"`
# usage (see the auto-optimize import-detection path), so a program that never
# imports `dgram` links none of its code. Pure cfg gate, no extra deps. (This is
# the first instance of a general per-module gating pattern; more modules can
# follow the same shape.)
mod-dgram = []
# Cold-path diagnostic JSON serializers (~67 KB of code + the `serde_json`
# pulled only by them, which dead-strips when unreferenced): GC cycle telemetry
# (`PERRY_GC_DIAG`), typed-feedback trace dump (`PERRY_TYPED_FEEDBACK`), the v8
# heap-snapshot builder (`v8.getHeapSnapshot`/`writeHeapSnapshot`), and
# `process.report`. None are on a hot path. The env-driven dev diagnostics
# degrade gracefully when off (auto-optimize leaves this off unless the program
# uses a heap-snapshot / `process.report` API, which the compiler detects).
diagnostics = []
# The user's regular-expression engine (`regex` + `fancy-regex`, ~1.2 MB of
# DFA/NFA machinery). A program that never evaluates a regex literal, `RegExp`,
# a regex-coercing string method, or a glob API can't produce a RegExp at
# runtime, so the compiler leaves this off and the engine is never linked. The
# RegExp object's identity/display layer (header, `is_regex_pointer`, `toString`)
# stays always compiled, so console-formatting / value-to-string paths keep
# working with no engine present.
regex-engine = ["dep:regex", "dep:fancy-regex"]
# The TC39 `Temporal.*` API (`temporal_rs` + its transitive tz/calendar deps:
# jiff-tzdb, icu_calendar, timezone_provider, calendrical_calculations —
# ~580 KB). Independent of JS `Date` (which has its own `date.rs` impl), so a
# program that uses `Date` but never `Temporal.*` links none of this. The
# compiler enables it on `Temporal` usage; the Temporal cell's identity layer
# (is_temporal_value / GC class-id range) stays compiled so value
# formatting/JSON/instanceof on non-Temporal values keep working.
temporal = ["dep:temporal_rs"]
# WHATWG URL host canonicalization: the `url` crate's full host parser (IPv4
# shorthand / numeric hosts) + `idna` (Unicode domain ↔ punycode), ~195 KB
# incl. the transitive `percent_encoding`. Perry's URL parsing is otherwise
# hand-rolled (url/parse.rs), so the crates are only reached from 4 host/IDNA
# sites behind URL APIs (`new URL`, hostname setter, url.domainTo*, legacy
# url.resolve). A program that never uses a URL API links none of it; each gated
# site has a benign hand-rolled fallback. (`unicode-normalization`/`-segmentation`
# are NOT gated here — they're shared with Intl / String.normalize.)
url-engine = ["dep:url", "dep:idna"]
# `String.prototype.normalize` (NFC/NFD/NFKC/NFKD) via `unicode-normalization`
# (~113 KB of Unicode decomposition/composition tables). Only `string/compare.rs`
# uses it; a program that never calls `.normalize()` links none of it. (This is
# the *old* `unicode-normalization` crate, distinct from `idna`'s `icu_normalizer`,
# so it's independent of `url-engine`.)
string-normalize = ["dep:unicode-normalization"]
# `Intl.Segmenter` (UAX #29 grapheme/word/sentence segmentation) via
# `unicode-segmentation` (~73 KB) — the grapheme path backs string-width@7+/
# wrap-ansi@9+ (and thus ink). Only `intl.rs` uses it; a program that never
# constructs an `Intl.Segmenter` links none of it.
intl-segmenter = ["dep:unicode-segmentation"]
# `Intl.getCanonicalLocales` / `*.supportedLocalesOf` BCP-47 (UTS #35) language-tag
# canonicalization via `icu_locale_core` (the data-free structural parser — case
# normalization, variant ordering, extension well-formedness, UTS35 rejection of
# extlang/grandfathered/duplicate-singleton tags). No CLDR data is pulled (that
# would need `icu_locale` + `icu_locale_data`), so deep alias replacement
# (grandfathered→preferred, complex subtag replacement) is out of scope. Only
# `intl.rs` uses it; a program that never canonicalizes a locale links none of
# it (the compiler enables it on `Intl.getCanonicalLocales`/`supportedLocalesOf`
# usage). Already pulled transitively by `temporal`, so default/shipped builds
# carry no extra weight. A hand-rolled structural fallback covers the off case.
intl-locale = ["dep:icu_locale_core"]
# `full` only opt-ins the small Node-API helpers (os.hostname / os.homedir).
# `postgres`, `redis`, `whoami` were previously listed here but were either
# unimported (postgres, whoami) or only used by a now-deleted `redis_client.rs`
# whose `js_redis_*` symbols nothing in codegen ever resolved (perry-stdlib's
# ioredis.rs is the live Redis path). Removing them drops ~1.5+ MB from every
# Perry binary that links libperry_runtime.a.
full = ["dep:hostname", "dep:dirs"]
# When perry-stdlib is the consumer, exclude no-op stubs to avoid duplicate symbols
stdlib = []
# Extension-crate test binaries that link the real perry-ext-ws symbols still
# need runtime-link for perry-ffi helpers, but must not also export runtime-only
# js_ws_* stubs.
external-ws-symbols = []
# Extension-crate test binaries that link the real perry-ext-fetch symbols need
# runtime-link for perry-ffi helpers, but must not also export runtime-only
# js_fetch_* stubs.
external-fetch-symbols = []
# Enable geisterhand in-process fuzzer (callback registry + dispatch queue)
geisterhand = []
# iOS/tvOS game loop: provides main() that spawns user code on game thread + UIApplicationMain
ios-game-loop = []
# watchOS game loop: provides main() that spawns user code on game thread + WKApplicationMain.
# For Metal/wgpu engines that need to own the draw surface (see crates/perry-runtime/src/watchos_game_loop.rs).
watchos-game-loop = []
# HarmonyOS NAPI entry: provides napi_module_register + a `run` export that
# invokes Perry's compiled `main()`. Auto-enabled by the compiler when
# --target harmonyos[-simulator] is passed (see crates/perry-runtime/src/ohos_napi.rs).
ohos-napi = []
# WebAssembly host shims (issue #76). When on, `webassembly.rs` is compiled
# into libperry_runtime.a, which adds undefined references to `perry_wasm_host_*`
# (resolved by linking libperry_wasm_host.a). The auto-optimize path turns
# this on only when the user's program references `WebAssembly.*`, so non-wasm
# programs don't pay an unresolvable-symbol penalty at link time.
wasm-host = []

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
libc = "0.2"
rand = "0.8"
regex = { version = "1", optional = true }
# Taffy — flexbox / grid layout engine for the perry/tui module
# (#358 Phase 3). Same crate Bevy and Dioxus use; pure Rust, no FFI.
taffy = { version = "0.7", default-features = false, features = ["std", "flexbox", "taffy_tree"] }
fancy-regex = { version = "0.18", optional = true }
itoa = "1"
ryu = "1"
base64 = "0.22"
hostname = { version = "0.4", optional = true }
dirs = { version = "6", optional = true }
lazy_static = "1.4"

# TC39 Temporal API (#4686). Pure-Rust date/time engine (the same one V8
# uses). We write no calendar/duration/timezone math — temporal_rs owns it;
# our code is binding glue per type. `compiled_data` vendors the IANA tz DB
# hermetically (needed by ZonedDateTime / Now), `sys-local` adds the
# current-system-zone lookup used by Temporal.Now.*ISO() with no argument.
temporal_rs = { version = "0.2.3", default-features = false, features = ["std", "compiled_data", "sys-local"], optional = true }

serde_json = "1"
unicode-normalization = { version = "0.1", optional = true }
# #4877: extended grapheme-cluster / word / sentence segmentation backing
# Intl.Segmenter (the grapheme path is what string-width@7+/wrap-ansi@9+ use,
# so it gates ink). Pure-Rust UAX #29 implementation, already in our lock graph.
unicode-segmentation = { version = "1", optional = true }
# #5298: BCP-47 (UTS #35) structural locale-tag canonicalization for
# `Intl.getCanonicalLocales` / `*.supportedLocalesOf`. The data-free structural
# parser only (no CLDR alias tables); already in our lock graph via temporal_rs.
icu_locale_core = { version = "2", optional = true }
idna = { version = "1", optional = true }
url = { version = "2", optional = true }
# #4911: real node:dns resolve*/reverse. hickory-proto provides DNS wire-format
# encode/decode + record types; we drive it synchronously over a blocking
# std::net::UdpSocket (TCP fallback on truncation), so — unlike hickory-resolver
# — it pulls NO tokio into the core runtime, matching net.rs's blocking-I/O
# style. resolv-conf reads the system nameserver list from /etc/resolv.conf.
hickory-proto = { version = "0.26", default-features = false, features = ["std"] }
resolv-conf = "0.7"
# #4911: real node:dgram UDP sockets. std::net::UdpSocket covers bind/send/recv
# + the common multicast/broadcast/TTL options; socket2 borrows the same fd
# (SockRef) for the few std lacks — set_multicast_if and source-specific
# membership — so those are real rather than silent no-ops.
socket2 = { version = "0.6", features = ["all"] }
# Issue #62: mimalloc replaces the system allocator for gc_malloc/arena/etc.
# macOS `malloc` is ~25-40ns/alloc; mimalloc's per-thread free-list is ~5-10ns.
# Set as #[global_allocator] in lib.rs, so it covers Rust heap allocations in
# both the `perry` CLI and the compiled-TypeScript executables linked against
# libperry_runtime.a.
mimalloc = { version = "0.1", default-features = false }

# We'll add GC bindings later
# For now, use a simple bump allocator or leak memory for MVP

# Windows raw-mode for perry/tui input (#406). The Unix path uses
# libc tcsetattr; Windows uses SetConsoleMode via windows-sys.
# `Win32_System_LibraryLoader` powers `perry_plugin_load` / `perry_plugin_unload`
# (`LoadLibraryW` / `GetProcAddress` / `FreeLibrary` — the Win32 equivalents of
# `libc::dlopen` / `dlsym` / `dlclose` that the Unix branch uses).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

# #855: libc::mach_host_self is deprecated; the mach2 crate is the
# upstream-recommended replacement. Pulled in only where we actually
# call host_statistics64 (`js_os_freemem` on macOS / iOS). Need 0.6+
# because earlier mach2 releases didn't surface mach_host_self.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.6"

# build.rs auto-generates no-op `perry_ui_*` FFI stubs for the harmonyos
# build (cfg(feature = "ohos-napi")) by reading the dispatch tables here.
# See `build.rs` and issue #395 for the rationale.
[build-dependencies]
perry-dispatch = { path = "../perry-dispatch" }
