[package]
name = "perry-stdlib-static"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Staticlib wrapper (#5422): emits libperry_stdlib.a from the rlib-only perry-stdlib crate"

# Output name stays `perry_stdlib` so the produced archive is the canonical
# `libperry_stdlib.a` / `perry_stdlib.lib` every consumer already looks for.
[lib]
name = "perry_stdlib"
crate-type = ["staticlib"]
path = "src/lib.rs"

[features]
# Plain build reproduces today's full `cargo build -p perry-stdlib` archive;
# auto-optimize uses `--no-default-features --features perry-stdlib/<subset>`.
default = ["perry-stdlib/default"]

[dependencies]
perry-stdlib = { path = "../perry-stdlib", default-features = false }
