[package]
name = "perry-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard library implementations: fs, http, crypto, mysql, postgres"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
# Default: include everything for backwards compatibility
default = ["full"]

# Full stdlib - everything included
full = ["http-server", "http-client", "database", "crypto", "compression", "email", "websocket", "image", "scheduler", "ids", "html-parser", "rate-limit", "validation", "net", "tls", "bundled-dotenv", "bundled-slugify", "bundled-lru-cache", "bundled-exponential-backoff", "bundled-events", "bundled-decimal", "bundled-dayjs", "bundled-moment", "bundled-commander"]

# Minimal core - just what's needed for basic programs
core = []

# In-tree implementation of the npm `dotenv` package (#466 Phase 4
# step 2). Default-on; turned off by the compiler when the
# well-known bindings table (`well_known_bindings.toml`) routes
# `import 'dotenv'` to `perry-ext-dotenv` so the link line doesn't
# end up with two copies of `_js_dotenv_*` symbols. Programs that
# don't import dotenv pay nothing for this either way.
bundled-dotenv = []

# In-tree implementation of `slugify` — same gating contract as
# `bundled-dotenv` (#466 Phase 4 step 2). Default-on through
# `default = ["full"]`; the well-known flip strips this when
# `import 'slugify'` resolves to perry-ext-slugify instead.
bundled-slugify = []

# In-tree implementation of `lru-cache`. Default-on through
# `default = ["full"]`; flipped to perry-ext-lru-cache by the
# well-known table (#466 Phase 4). Pulls the `lru` crate dep so
# both halves of the gate move in lockstep.
bundled-lru-cache = ["dep:lru"]

# Pure-Rust wrapper, no extra deps. Default-on through `full`.
bundled-exponential-backoff = []

# EventEmitter — pure Rust, no extra deps. Default-on through `full`.
bundled-events = []

# decimal.js / bignumber.js — needs `rust_decimal`. Default-on
# through `full`.
bundled-decimal = ["dep:rust_decimal"]

# dayjs / date-fns — chrono is always-on (used by lots of stdlib),
# so this gate just toggles whether perry-stdlib's dayjs module is
# compiled in. Default-on through `full`; the well-known flip
# strips it when `import 'dayjs'` resolves to perry-ext-dayjs.
bundled-dayjs = []

# moment — same gating contract as bundled-dayjs (chrono is
# always-on). Default-on through `full`; flipped to perry-ext-moment
# by the well-known table.
bundled-moment = []

# commander — pure-Rust, no extra deps. Default-on through `full`;
# the well-known flip strips this when `import 'commander'` resolves
# to perry-ext-commander instead.
bundled-commander = []

# HTTP server (hyper-based native framework)
# Note: dashmap is now always-on (used by core handle registry), no longer listed here.
http-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "async-runtime"]

# HTTP client (node-fetch, axios)
http-client = ["dep:reqwest", "async-runtime"]

# WebSocket
websocket = ["dep:tokio-tungstenite", "dep:futures-util", "async-runtime"]

# Raw TCP sockets (`net.Socket` — Postgres wire driver, custom protocols).
net = ["async-runtime"]

# TLS — direct `tls.connect()` and `socket.upgradeToTLS()` (Postgres SSLRequest flow).
# Uses rustls (not native-tls) to avoid OpenSSL on every platform and keep Android
# cross-compile unblocked; matches reqwest/tokio-tungstenite/mongodb feature flags.
tls = ["net", "dep:tokio-rustls", "dep:rustls", "dep:rustls-native-certs"]

# Databases
database = ["database-postgres", "database-mysql", "database-sqlite", "database-redis", "database-mongodb"]
database-postgres = ["dep:sqlx", "async-runtime"]
database-mysql = ["dep:sqlx", "async-runtime"]
database-sqlite = ["dep:rusqlite"]
# `database-redis` umbrella retained for backwards-compat;
# v0.5.565's well-known flip toggles `bundled-ioredis` instead.
database-redis = ["bundled-ioredis"]
bundled-ioredis = ["dep:redis", "async-runtime"]
database-mongodb = ["dep:mongodb", "dep:bson", "dep:futures-util", "async-runtime"]

# Crypto (sha256, md5, bcrypt, jwt, etc.)
# Implies `async-runtime` because bcrypt/jwt/argon2 hashing offloads to
# `tokio::task::spawn_blocking`, and `ids` because `crypto.randomUUID()`
# delegates to the `uuid` crate.
# `crypto` stays as the umbrella for backwards-compat; `bundled-bcrypt`
# and `bundled-argon2` (v0.5.537) split out the two password-hashing
# bindings so the well-known flip (#466 Phase 4 step 2) can route them
# to perry-ext-bcrypt / perry-ext-argon2 without taking the rest of
# the crypto surface offline.
crypto = ["dep:sha2", "dep:sha1", "dep:md-5", "dep:hex", "dep:hmac", "dep:aes", "dep:cbc", "dep:scrypt", "dep:pbkdf2", "dep:base64", "dep:x25519-dalek", "dep:ed25519-dalek", "dep:aes-gcm", "dep:hkdf", "async-runtime", "ids", "bundled-bcrypt", "bundled-argon2", "bundled-jsonwebtoken", "bundled-ethers"]
bundled-bcrypt = ["dep:bcrypt", "async-runtime"]
bundled-argon2 = ["dep:argon2", "async-runtime"]
bundled-jsonwebtoken = ["dep:jsonwebtoken"]
# ethers blockchain utilities — pure Rust, no extra deps. Default-on
# through `crypto` umbrella; the well-known flip strips this and
# routes to perry-ext-ethers when `import 'ethers'` is detected.
bundled-ethers = []

# Compression (zlib)
compression = ["dep:flate2"]

# Email (nodemailer) — `email` umbrella retained for
# backwards-compat; v0.5.558's well-known flip toggles
# `bundled-nodemailer` instead.
email = ["bundled-nodemailer"]
bundled-nodemailer = ["dep:lettre", "async-runtime"]

# Image processing (sharp) — `image` umbrella stays for
# backwards-compat; v0.5.551's well-known flip toggles
# `bundled-sharp` instead.
image = ["bundled-sharp"]
bundled-sharp = ["dep:image"]

# HTML parsing (cheerio) — `html-parser` umbrella stays for
# backwards-compat; v0.5.550's well-known flip toggles
# `bundled-cheerio` instead.
html-parser = ["bundled-cheerio"]
bundled-cheerio = ["dep:scraper"]

# Scheduler (cron) — `scheduler` umbrella retained for
# backwards-compat; v0.5.564's well-known flip toggles
# `bundled-cron` instead.
scheduler = ["bundled-cron"]
bundled-cron = ["dep:cron", "dep:tokio-cron-scheduler", "async-runtime"]

# Rate limiting — `rate-limit` umbrella stays for backwards-compat;
# v0.5.552's well-known flip toggles `bundled-ratelimit` instead.
rate-limit = ["bundled-ratelimit"]
bundled-ratelimit = ["dep:governor", "async-runtime"]

# Validation — `validation` umbrella stays for backwards-compat;
# v0.5.538's well-known flip toggles `bundled-validator` instead.
validation = ["bundled-validator"]
bundled-validator = ["dep:validator", "dep:regex"]

# UUID/nanoid — `ids` stays as the umbrella for backwards compat;
# from v0.5.534 onwards the per-binding split (`bundled-uuid` /
# `bundled-nanoid`) is what the well-known bindings flip (#466
# Phase 4 step 2) toggles. Each sub-feature pulls in its own
# optional dep + gates its own module so a wrapper port can strip
# exactly one binding from perry-stdlib without affecting the other.
ids = ["bundled-uuid", "bundled-nanoid"]
bundled-uuid = ["dep:uuid"]
bundled-nanoid = ["dep:nanoid"]

# Async runtime (tokio) - internal feature
async-runtime = ["dep:tokio"]

[dependencies]
perry-runtime = { workspace = true, features = ["stdlib"] }
# Re-bundle updater symbols into libperry_stdlib.a so user binaries that
# call `perry/updater` resolve at link time without extra wiring.
perry-updater = { workspace = true }

thiserror.workspace = true
anyhow.workspace = true

# Always needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itoa = "1.0"
ryu = "1.0"
once_cell = "1.19"
lazy_static = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"  # Required by lodash (core module)

# === OPTIONAL DEPENDENCIES ===

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "io-util"], optional = true }

# HTTP Server
hyper = { version = "1.4", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1.5", optional = true }
# DashMap is used by the always-on handle registry (`common/handle.rs`),
# so it must NOT be optional — every minimal-stdlib build needs it.
dashmap = "6.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"], default-features = false, optional = true }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }

# TLS (for net.Socket.upgradeToTLS and tls.connect) — rustls-only, no OpenSSL.
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8", optional = true }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "postgres", "chrono"], optional = true }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"], optional = true }
mongodb = { version = "3.5", default-features = false, features = ["compat-3-0-0", "rustls-tls", "dns-resolver"], optional = true }
bson = { version = "2.9", optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }

# Crypto
sha2 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "10.3", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
scrypt = { version = "0.11", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
argon2 = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"], optional = true }
ed25519-dalek = { version = "2.1", optional = true }
aes-gcm = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }

# Compression
flate2 = { version = "1.0", optional = true }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "hostname", "pool"], optional = true }

# Image
image = { version = "0.25", optional = true }

# HTML parser
scraper = { version = "0.19", optional = true }

# Scheduler
cron = { version = "0.12", optional = true }
tokio-cron-scheduler = { version = "0.10", optional = true }

# Rate limiting
governor = { version = "0.6", optional = true }

# Validation
validator = { version = "0.20", features = ["derive"], optional = true }
regex = { version = "1.10", optional = true }

# IDs
uuid = { version = "1.11", features = ["v4", "v1", "v7"], optional = true }
nanoid = { version = "0.4", optional = true }

# LRU Cache — optional from v0.5.539 so the well-known flip can
# strip the perry-stdlib copy when `import 'lru-cache'` resolves
# to perry-ext-lru-cache instead.
lru = { version = "0.16", optional = true }

# CLI parsing (Commander)
clap = { version = "4.4", features = ["derive"] }

# Decimal math (Big.js / Decimal.js) — optional from v0.5.547 so
# the well-known flip can strip perry-stdlib's copy when
# `import 'decimal.js'` resolves to perry-ext-decimal instead.
rust_decimal = { version = "1.33", features = ["maths"], optional = true }

# libc — termios for readline's raw-mode toggle (#347 Phase 2). No-op
# stub on non-Unix platforms (Windows raw mode goes via the windows
# crate; iOS/Android stdlibs are stubbed entirely).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
